--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,8 @@ services:
       - "80:8080"
     volumes:
       - ./sillyGirl:/sillyGirl
+    environment:
+      # 国内网络建议开启，国外网络开启可能变慢
+      - ENABLE_GOPROXY=true  #go 加速代理
+      - ENABLE_GITHUBPROXY=true #github 加速代理
+      - ENABLE_APKPROXY=true #alpin APK 加速代理
