--- a/conf/example_sets.conf
+++ b/conf/example_sets.conf
@@ -1,11 +1,11 @@
 # 傻妞机器人名
-#set sillyGirl name 傻妞
+set sillyGirl name 傻妞
 # 傻妞http服务端口
-#set sillyGirl port 8080
+set sillyGirl port 8080
 # 傻妞消息撤回等待时间，单位秒
-#set sillyGirl duration 5
+set sillyGirl duration 5
 # 傻妞自动升级是否通知
-#set sillyGirl update_notify false
+set sillyGirl update_notify false
 # 傻妞内置赞赏码
 #set sillyGirl appreciate https://gitee.com/aiancandle/sillyGirl/raw/main/appreciate.jpg
 
