--- a/sets.conf
+++ b/sets.conf
@@ -1,18 +1,18 @@
 ### 一些基础设置 ###
 # 傻妞机器人名
-#set sillyGirl name # 傻妞
+set sillyGirl name # 傻妞
 # 傻妞http服务端口
-#set sillyGirl port 8080
+set sillyGirl port 8080
 # 傻妞消息撤回等待时间，单位秒
-#set sillyGirl duration 5
+set sillyGirl duration 5
 # 傻妞自动升级是否通知
-#set sillyGirl update_notify false
+set sillyGirl update_notify true
 # 是否开启傻妞自动更新
-#set sillyGirl auto_update true
+set sillyGirl auto_update false
 # 傻妞内置赞赏码
-#set sillyGirl appreciate https://gitee.com/aiancandle/sillyGirl/raw/main/appreciate.jpg
-是否启动http服务
-#set sillyGirl enable_http_server false
+set sillyGirl appreciate https://gitee.com/aiancandle/sillyGirl/raw/main/appreciate.jpg
+#是否启动http服务
+set sillyGirl enable_http_server true
 # 关闭守护模式，守护模式会导致没法自动升级
 #systemctl disable sillyGirl
 
@@ -21,7 +21,7 @@
 #set qinglong client_id ?
 # 设置青龙openapi的client_secret参数
 #set qinglong client_secret ?
-青龙是否开启自动隐藏重复任务功能
+# 青龙是否开启自动隐藏重复任务功能
 #set qinglong autoCronHideDuplicate true
 # 设置青龙面板地址
 #set qinglong host http://127.0.0.1:5700
@@ -84,7 +84,7 @@
 # 设置插件调用地址，确保傻妞可以访问可爱猫端口
 #set wx api_url ?
 # 设置图片转发模式，否则可能会出现此图片来自xx未经允许不得使用的提示
-#set wx relay_mode true
+set wx relay_mode true
 # 设置指定转发地址，格式为 https://域名/relay?url=%s，不知道不用填
 #set wx relaier ?
 # 设置# 傻妞是否动态网络地址，适用于# 傻妞家庭宽带而可爱猫在云服务器的情况下
@@ -102,7 +102,7 @@
 
 ### 对接pushplus的设置 ###
 # 管理员推送绑定pushplus指令
-set sillyGirl pushplus [token]
+#set sillyGirl pushplus [token]
 
 # 关键词撤回功能，关键词支持正则表达式。
 #set sillyGirl recall 关键词1&关键词2...
@@ -111,7 +111,7 @@ set sillyGirl pushplus [token]
 
 ### 对接芝士的设置 ###
 # 资产推送定时，以九点为例，包括失效提醒。
-#set jd_cookie asset_push 0 9 * * *
+set jd_cookie asset_push 0 9 * * *
 
 # 设置阿东登录地址，例：set jd_cookie adong_addr 192.168.1.1:5702
 #set jd_cookie adong_addr 阿东ip:端口
@@ -125,9 +125,6 @@ set sillyGirl pushplus [token]
 
 # 对接xdd，额外设置参数
 #set jd_cookie xdd_token ?
-
-# 定时推送
-#set jd_cookie asset push ?
 
 ### 对接小爱同学的设置 ###
 # 小爱同学，可以指定API，对小爱说对话模式即可开启连续对话模式，闭嘴可关闭。
